testsuite/poke.pkl/add-strings-diag-1.pk
/* { dg-do compile } */

var a = "foo"
        + 23; /* { dg-error "invalid operand.*\n.*expected string" } */
